feat:提供搜索小组的功能
